# oresat-linux-manager

./: .clang-format  .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  Doxyfile  README.md  format_code.sh  oresat-candaemon.service  oresat-linux-managerd.service  oresat_linux_node.xpd
.github/workflows/: build_cfc.yml  build_dxwifi.yml  build_generic.yml  build_gps.yml  build_live.yml  build_star_tracker.yml
debian/: postinst  postrm  prerm
docs/: OreSatLinuxDiagram.drawio  daemon_controller.md  design_guide_candaemon_app.md  index.html  oresat-linux-manager.drawio
scripts/: canable.sh  network_manager.py  olm_app_manager.py  olm_file_transfer.py  olm_system_info.py  os_command.py  sdo_transfer.py  time_sync.py  vcan.sh
src/: CMakeLists.txt  CO_driver_custom.h  main.c
src/apps/: CMakeLists.txt  dxwifi_app.c  dxwifi_app.h  linux_updater_app.c  logind_app.c  logind_app.h  star_tracker_app.c  star_tracker_app.h  systemd_app.c  systemd_app.h  template_app.c  template_app.h  updater_app.c  updater_app.h
src/boards/: CMakeLists.txt
src/boards/cirrus_flux_camera/: CMakeLists.txt  application.c  application.h  board_apps.c  board_apps.h  board_main.c  pru_camera_test_app.c  pru_camera_test_app.h
src/boards/cirrus_flux_camera/object_dictionary/: CFC_OD.eds  CFC_OD.md  CFC_OD.xdd  CFC_OD.xml  CMakeLists.txt  CO_OD.c  CO_OD.h  cfc.eds  cfc.md  cfc.xdd
src/boards/cirrus_flux_camera/test_process/: .gitignore  Makefile  camera-i2c.c  camera_dbus_test_server.c  oresat-candaemon.service  oresat-test-cfc.c  oresat-test-cfc.service  take_image.py  testprucam.c  testprucam.h
src/boards/dxwifi/: CMakeLists.txt  board_main.c  dxwifi_app.c  dxwifi_app.h
src/boards/dxwifi/object_dictionary/: CMakeLists.txt  CO_OD.c  CO_OD.h  dxwifi.eds  dxwifi.md  dxwifi.xdd  dxwifi_OD.eds  dxwifi_OD.md  dxwifi_OD.xdd
src/boards/generic/: CMakeLists.txt  board_main.c
src/boards/generic/object_dictionary/: CO_OD.c  CO_OD.h  OD.c  OD.h  generic.eds  generic.md  generic.xdd  generic_OD.dcf  generic_OD.eds  generic_OD.md  generic_OD.txt  generic_OD.xdd
src/boards/gps/: CMakeLists.txt  application.c  application.h  board_apps.c  board_main.c  gps_app.c  gps_app.h  sdr_gps_app.c  sdr_gps_app.h
src/boards/gps/object_dictionary/: CO_OD.c  CO_OD.h  GPS_OD.eds  GPS_OD.md  GPS_OD.xdd  GPS_OD.xml  gps.eds  gps.md  gps.xdd
src/boards/live/: CMakeLists.txt  application.c  board_apps.c  board_main.c
src/boards/live/object_dictionary/: CO_OD.c  CO_OD.h  live_OD.eds  live_OD.md  live_OD.xdd  live_OD.xml
src/boards/star_tracker/: .ycm_extra_conf.py  CMakeLists.txt  application.c  application.h  board_apps.c  board_main.c  star_tracker_app.c  star_tracker_app.h
src/boards/star_tracker/object_dictionary/: CO_OD.c  CO_OD.h  star_tracker.eds  star_tracker.md  star_tracker.xdd  star_tracker_OD.eds  star_tracker_OD.md  star_tracker_OD.xdd  star_tracker_OD.xml
src/boards/star_tracker/test/: a.out  test.c
src/boards/template/: application.c  board_apps.c  board_apps.h
src/boards/template/object_dictionary/: CO_OD.c  CO_OD.h  template_OD.eds  template_OD.xdd  template_OD.xml
src/common/: CMakeLists.txt  CO_fread.c  CO_fread.h  CO_fwrite.c  CO_fwrite.h  OD_helpers.c  OD_helpers.h  app.c  app.h  app_OD_helpers.c  app_OD_helpers.h  app_dbus_controller.c  app_dbus_controller.h  app_helpers.h  app_include.h  apps.h  board_info.c  board_info.h  cpufreq.c  cpufreq.h  daemon_controller.c  daemon_controller.h  daemon_manager.c  daemon_manager.h  dbus_controller.c  dbus_controller.h  ecss_time.c  ecss_time.h  file_transfer.c  file_transfer.h  file_transfer_ODF.c  file_transfer_ODF.h  linux_updater_app.c  linux_updater_app.h  log_message.c  log_message.h  logging.c  logging.h  logind_interface.c  logind_interface.h  (+12 more)
src/core/: CMakeLists.txt  CO_fstream_odf.c  CO_fstream_odf.h  app_manager.c  app_manager.h  app_manager_odf.c  app_manager_odf.h  async_loop.c  async_loop.h  board_main.h  configs.c  configs.h  cpufreq.c  dbus_controller.c  dbus_controller.h  ecss_time_odf.c  ecss_time_odf.h  file_caches_odf.c  file_caches_odf.h  globals.h  linux_updater_odf.h  main.c  olm_app.h  olm_control_odf.c  olm_control_odf.h  olm_file.c  olm_file.h  olm_file_cache.c  olm_file_cache.h  os_command.c  os_command.h  system_info.c  system_info.h  time_producer.c  time_producer.h  time_sync.c  time_sync.h  updater_odf.c  updater_odf.h
src/core/ODFs/: CMakeLists.txt  CO_fread.c  CO_fread.h  CO_fstream_odf.c  CO_fstream_odf.h  CO_fwrite.c  CO_fwrite.h  app_manager_odf.c  board_info.c  board_info.h  daemon_manager.c  file_caches_odf.c  file_caches_odf.h  linux_updater_odf.c  logind_odf.c  logind_odf.h
src/core/apps/: CMakeLists.txt  linux_updater_app.c  linux_updater_app.h  logind_app.c  systemd_app.c  systemd_app.h
src/daemon_modules/: CMakeLists.txt  dxwifi.c  dxwifi.h  gps.c  gps.h  logind.c  logind.h  star_tracker.c  star_tracker.h  systemd.c  systemd.h  updaterd.c  updaterd.h
src/daemons/: CMakeLists.txt  gps.c  gps.h  logind.c  logind.h  star_tracker.c  star_tracker.h  systemd.c  systemd.h  updaterd.c  updaterd.h
src/manitory_apps/: CMakeLists.txt  updater_app.c  updater_app.h
src/socketCAN/: CO_SDO.h  CO_error.c
src/socketCAN_mod/: CMakeLists.txt  CO_error.h
src/system_apps/: CMakeLists.txt  linux_updater_app.c  linux_updater_app.h  logind_app.c  logind_app.h  power_management_app.c  power_management_app.h  system_apps.c  system_apps.h  systemd_app.c  systemd_app.h
src/test_apps/: OD_app.c  OD_app.h  test_apps.c  test_apps.h
tests/: README.md  common.py  requirements.txt  setup_pytest.py  test_CO_fread.py  test_CO_fwrite.py  test_canopen.py  test_file_caches.py  test_fread.py  test_fwrite.py  test_helpers.py  test_os_command.py
tests/test_daemon/: file_generator.py  test_daemon.py
